--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,19 @@
 version: '2'
 services:
-  web:
-    build: .
+  server:
+    build:
+      context: ./
+    command: /usr/app/node_modules/.bin/nodemon src/index.js
+    volumes:
+    - ./:/usr/app
+    - /usr/app/node_modules
     ports:
-    - "80:8000"
-    restart: always
-    #env_file: ./server/.env
+    - "8080:8080"
+    env_file: ./.env
     environment:
-    - NODE_ENV=production
+    - NODE_ENV=development
     - CHOKIDAR_USEPOLLING=true
     - MONGODB_URL=mongodb+srv://jalenjackson:kiHNDOvn8U22Q05U@quizopcluster-16smp.mongodb.net/production?retryWrites=true
     - AWS_ACCESS_KEY=AKIAJ6ZWR3NLXHM3Z7ZA
     - AWS_SECRET=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
     - JWT_KEY=secret
-    - PORT=8000
