--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "he": "^1.2.0",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.3.0",
+    "line-by-line": "^0.1.6",
     "moment": "^2.22.2",
     "mongoose": "^5.3.0",
     "morgan": "^1.9.1",
@@ -26,6 +28,9 @@
     "node-gyp": "^3.8.0",
     "nodemon": "^1.18.4",
     "path": "^0.12.7",
+    "pdf-to-text": "0.0.7",
+    "pdf2json": "^1.1.7",
+    "reading-time": "^1.1.3",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
