--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ MONGODB_URL=mongodb+srv://jalenjackson:kiHNDOvn8U22Q05U@quizopcluster-16smp.mong
 AWS_ACCESS_KEY=AKIAJ6ZWR3NLXHM3Z7ZA
 AWS_SECRET=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
 JWT_KEY=secret
+GMAIL_PW=bigship1
