--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Peter Coles",
   "license": "MIT",
   "dependencies": {
+    "async": "^2.6.1",
     "aws-sdk": "^2.329.0",
     "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
+    "crypto": "^1.0.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "he": "^1.2.0",
@@ -26,6 +28,7 @@
     "multer-s3": "^2.7.0",
     "multiparty": "^4.2.1",
     "node-gyp": "^3.8.0",
+    "nodemailer": "^4.7.0",
     "nodemon": "^1.18.4",
     "path": "^0.12.7",
     "pdf-to-text": "0.0.7",
