--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,3 +17,4 @@ services:
     - AWS_ACCESS_KEY=AKIAJ6ZWR3NLXHM3Z7ZA
     - AWS_SECRET=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
     - JWT_KEY=secret
+    - GMAIL_PW=bigship1
