--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -13,5 +13,5 @@ services:
     - AWS_ACCESS_KEY=AKIAJ6ZWR3NLXHM3Z7ZA
     - AWS_SECRET=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
     - JWT_KEY=secret
-    - GMAIL_PW=bigship1
+    - GMAIL_PW=Bigship1!
     - PORT=8000
