--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.3.0",
     "line-by-line": "^0.1.6",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "mongoose": "^5.3.0",
     "morgan": "^1.9.1",
@@ -34,6 +35,7 @@
     "pdf-to-text": "0.0.7",
     "pdf2json": "^1.1.7",
     "reading-time": "^1.1.3",
+    "sitemap": "^2.1.0",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
