--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
 # dependencies
 /node_modules
 .idea
+/src/scripts
 .env
-docker-compose.prod.yml
+docker-compose-prod.yml
 docker-compose.yml
 
 npm-debug.log*
