--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "async": "^2.6.1",
     "aws-sdk": "^2.329.0",
-    "bcrypt": "^3.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "crypto": "^1.0.1",
     "dotenv": "^6.1.0",
